Fix UI/UX on Safari, etc

--- a/packages/form/inputNumber/index.styl
+++ b/packages/form/inputNumber/index.styl
@@ -76,6 +76,9 @@ label.InputNumber
       opacity .5
     button
     button:hover
+      margin 0
+      padding 0
+      line-height 1
       color $cl-tertiary-text
     button:active
       color $cl-core
